<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/pref_header_general">
        <SwitchPreference
            app:defaultValue="@string/useAutoCalculateDefaultValue"
            app:key="@string/useAutoCalculateKey"
            app:summary="@string/useAutoCalculateSummary"
            app:summaryOff="@string/useAutoCalculateSummaryOff"
            app:summaryOn="@string/useAutoCalculateSummaryOn"
            app:switchTextOff="@string/useAutoCalculateSwitchTextOff"
            app:switchTextOn="@string/useAutoCalculateSwitchTextOn"
            app:title="@string/useAutoCalculateSwitchTitle"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_header_display">
        <SwitchPreference
            app:defaultValue="@string/showBackgroundDefaultValue"
            app:key="@string/showBackgroundKey"
            app:summary="@string/showBackgroundSummary"
            app:summaryOff="@string/showBackgroundSummaryOff"
            app:summaryOn="@string/showBackgroundSummaryOn"
            app:switchTextOff="@string/showBackgroundSwitchTextOff"
            app:switchTextOn="@string/showBackgroundSwitchTextOn"
            app:title="@string/showBackgroundTitle"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="@string/useAutoNightModeDefaultValue"
            app:key="@string/useAutoNightModeKey"
            app:summary="@string/useAutoNightModeSummary"
            app:summaryOff="@string/useAutoNightModeSummaryOff"
            app:summaryOn="@string/useAutoNightModeSummaryOn"
            app:switchTextOff="@string/useAutoNightModeSwitchTextOff"
            app:switchTextOn="@string/useAutoNightModeSwitchTextOn"
            app:title="@string/useAutoNightModeSwitchTitle"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_header_local">
        <EditTextPreference
            app:defaultValue="@string/defaultTaxPercentageDefaultValue"
            app:key="@string/defaultTaxPercentageKey"
            app:title="@string/defaultTaxPercentageTitle"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="@string/defaultTipPercentageDefaultValue"
            app:key="@string/defaultTipPercentageKey"
            app:title="@string/defaultTipPercentageTitle"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
<!--THEY all have default value.
as soon as program is run we must create the files-->